main/default/objects/TriggerSettings__c/TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings determine if a trigger has been disabled.</description>
    <label>Trigger Settings</label>
</CustomObject>