main/default/objects/TriggerSettings__c/fields/SurveyQuestionTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>SurveyQuestionTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SurveyQuestionTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>