main/default/objects/TriggerSettings__c/fields/SurveyTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>SurveyTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SurveyTriggerDisabled</label>
    <type>Checkbox</type>
</CustomField>