main/default/objects/TriggerSettings__c/fields/VendorPaymentTriggerDisabled__c.field-meta.xml
<CustomField>
    <fullName>VendorPaymentTriggerDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Payment Trigger Disabled</label>
    <type>Checkbox</type>
</CustomField>